--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"i18next": "^23.11.1",
 		"ky": "^1.2.3",
 		"mobx": "^6.12.3",
 		"mobx-react-lite": "^4.0.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^14.1.0",
 		"react-router-dom": "^6.22.3",
 		"styled-components": "^6.1.8"
 	},
