--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mantine/core": "^7.8.0",
+		"@mantine/form": "^7.8.0",
+		"@mantine/hooks": "^7.8.0",
 		"i18next": "^23.11.1",
 		"i18next-browser-languagedetector": "^7.2.1",
 		"ky": "^1.2.3",
