--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,10 @@
 
 		"baseUrl": ".",
 		"paths": {
+			"@pages": ["src/pages"],
+			"@widgets": ["src/widgets"],
+			"@features": ["src/features"],
+			"@entities": ["src/entities"],
 			"@shared/*": ["src/shared/*"]
 		}
 	},
