--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"react-i18next": "^14.1.0",
 		"react-icons": "^5.1.0",
 		"react-router-dom": "^6.22.3",
-		"styled-components": "^6.1.8"
+		"styled-components": "^6.1.8",
+		"type-fest": "^4.18.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20.12.7",
