--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-i18next": "^14.1.0",
 		"react-icons": "^5.1.0",
 		"react-router-dom": "^6.22.3",
+		"socket.io-client": "^4.7.5",
 		"styled-components": "^6.1.8",
 		"type-fest": "^4.18.2"
 	},
@@ -30,6 +31,7 @@
 		"@types/node": "^20.12.7",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
+		"@types/socket.io-client": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-react": "^4.2.1",
