--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 _API_URL=http://localhost:3000/api/
-_URL_TO_AVATARS=http://localhost:3000/api/users/avatars/
+_URL_TO_AVATARS=http://localhost:3000/api/users/avatars
 _DIALOGS_SOCKET_SERVER_URL=http://localhost:4000/dialogs-server
